# complete_django

./: db.sqlite3  pyproject.toml  vercel.json
demo/: settings.py  urls.py
myapp/: urls.py  views.py
myapp/migrations/: 0001_initial.py
myapp/templates/: home.html  todos.html
