[tool.poetry]
name = "django-todo"
version = "0.1.0"
description = ""
authors = ["Gabriel <onlinehassle1234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
